Possibly functional new texture extraction system.