@@ -3,6 +3,8 @@ package com.github.lukebemish.excavated_variants.data;
 import com.github.lukebemish.excavated_variants.ExcavatedVariants;
 import com.google.gson.*;
 import com.google.gson.annotations.Expose;
+import com.mojang.serialization.DataResult;
+import com.mojang.serialization.JsonOps;
 import dev.architectury.platform.Platform;
 import net.minecraft.resources.ResourceLocation;
 import org.apache.commons.io.Charsets;
@@ -19,7 +21,7 @@ import java.util.HashMap;
 import java.util.List;
 
 public class ModConfig {
-    public static final Gson GSON = new GsonBuilder().setPrettyPrinting().excludeFieldsWithoutExposeAnnotation().create();
+    public static final Gson GSON = new GsonBuilder().setPrettyPrinting().setLenient().excludeFieldsWithoutExposeAnnotation().create();
     public static final Path CONFIG_PATH = Platform.getConfigFolder();
     public static final String FULL_PATH = CONFIG_PATH + "/"+ ExcavatedVariants.MOD_ID+".json";
     public static final String DIR_PATH = CONFIG_PATH + "/"+ ExcavatedVariants.MOD_ID+"/";
@@ -43,48 +45,6 @@ public class ModConfig {
     @Expose
     public boolean add_conversion_recipes = true;
 
-    private static final String[] UNEARTHED_STONE_LIST = new String[] {"beige_limestone","conglomerate","gabbro","granodiorite",
-            "grey_limestone","limestone","mudstone","phyllite","rhyolite","siltstone","slate","white_granite"};
-    private static final String[] UNEARTHED_STONE_EN_LIST = new String[] {"Beige Limestone","Conglomerate","Gabbro","Granodiorite",
-            "Grey Limestone","Limestone","Mudstone","Phyllite","Rhyolite","Siltstone","Slate","White Granite"};
-
-    private static List<String> genUnearthedBlockIdList(String oreName, String... toAdd) {
-        ArrayList<String> output = new ArrayList<>();
-
-        for (String s : UNEARTHED_STONE_LIST) {
-            output.add("unearthed:"+s+"_"+oreName);
-        }
-
-        output.addAll(Arrays.asList(toAdd));
-        return output;
-    }
-
-    private static List<String> genUnearthedStoneIdList(String... toAdd) {
-        ArrayList<String> output = new ArrayList<>();
-
-        for (String s : UNEARTHED_STONE_LIST) {
-            output.add("unearthed_"+s);
-        }
-
-        output.addAll(Arrays.asList(toAdd));
-        return output;
-    }
-
-    private static List<BaseStone> genUnearthedStoneList(BaseStone... toAdd) {
-        ArrayList<BaseStone> output = new ArrayList<>(Arrays.asList(toAdd));
-
-        for (int i = 0; i < UNEARTHED_STONE_LIST.length; i++) {
-            String s = UNEARTHED_STONE_LIST[i];
-                String enName = UNEARTHED_STONE_EN_LIST[i];
-                BaseStone stone = new BaseStone("unearthed_" + s, "unearthed:textures/block/" + s + ".png", enName, "unearthed:"+s,List.of("stone"));
-                output.add(stone);
-        }
-
-        output.addAll(Arrays.asList(toAdd));
-
-        return output;
-    }
-
     public static ModConfig getDefault() {
         ModConfig output = new ModConfig();
         output.format = CURRENT_VERSION;
@@ -101,7 +61,11 @@ public class ModConfig {
             }
             Files.list(path).forEach(p -> {
                 try {
-                    ModData data = GSON.fromJson(Files.newBufferedReader(p, StandardCharsets.UTF_8), ModData.class);
+                    JsonObject json = GSON.fromJson(Files.newBufferedReader(p,StandardCharsets.UTF_8),JsonObject.class);
+                    ModData data = ModData.CODEC.parse(JsonOps.INSTANCE,json).getOrThrow(false,(e)-> {
+                        ExcavatedVariants.LOGGER.error("Config file is corrupted: {}",e);
+                        throw new JsonSyntaxException("");
+                    });
                     output.mods.add(data);
                 } catch (IOException e) {
                     ExcavatedVariants.LOGGER.error("Could not find default config: " + p.getFileName());
@@ -111,15 +75,6 @@ public class ModConfig {
             });
         } catch (URISyntaxException | IOException e) {
             ExcavatedVariants.LOGGER.error("Could not load some default configs.", e);
-        }
-
-        for (ModData m : output.mods) {
-            for (BaseOre o : m.provided_ores) {
-                o.setupBlockId();
-            }
-            for (BaseStone s : m.provided_stones) {
-                s.setupBlockId();
-            }
         }
         output.priority = List.of("minecraft.json");
         return output;
@@ -160,9 +115,13 @@ public class ModConfig {
         List<String> loaded = new ArrayList<>();
         for (String p : config.priority) {
             try {
-                ModData data = GSON.fromJson(new FileReader(DIR_PATH + p), ModData.class);
+                JsonObject json = GSON.fromJson(new FileReader(DIR_PATH+p),JsonObject.class);
+                ModData data = ModData.CODEC.parse(JsonOps.INSTANCE,json).getOrThrow(false,(e)-> {
+                    ExcavatedVariants.LOGGER.error("Config file is corrupted: {}",e);
+                    throw new JsonSyntaxException("");
+                });
                 config.mods.add(data);
-                loaded.add(p);
+                loaded.add(p+".json");
             } catch (FileNotFoundException e) {
                 ExcavatedVariants.LOGGER.error("Could not find referenced config: "+p);
             } catch (JsonSyntaxException e) {
@@ -174,25 +133,21 @@ public class ModConfig {
                 String p = s.getFileName().toString();
                 if (!loaded.contains(p)) {
                     try {
-                        ModData data = GSON.fromJson(new FileReader(DIR_PATH + p), ModData.class);
+                        JsonObject json = GSON.fromJson(new FileReader(DIR_PATH+p),JsonObject.class);
+                        ModData data = ModData.CODEC.parse(JsonOps.INSTANCE,json).getOrThrow(false,(e)-> {
+                            ExcavatedVariants.LOGGER.error("Config file is corrupted: {}",e);
+                            throw new JsonSyntaxException("");
+                        });
                         config.mods.add(data);
                     } catch (FileNotFoundException e) {
-                        ExcavatedVariants.LOGGER.error("Could not find config: " + p + ".json");
+                        ExcavatedVariants.LOGGER.error("Could not find config: " + p);
                     } catch (JsonSyntaxException e) {
-                        ExcavatedVariants.LOGGER.error("Issue reading config: "+p+".json");
+                        ExcavatedVariants.LOGGER.error("Issue reading config: "+p);
                     }
                 }
             }
         } catch (IOException e) {
             ExcavatedVariants.LOGGER.error("Could not load config directory...", e);
-        }
-        for (ModData m : config.mods) {
-            for (BaseOre o : m.provided_ores) {
-                o.setupBlockId();
-            }
-            for (BaseStone s : m.provided_stones) {
-                s.setupBlockId();
-            }
         }
         return config;
     }
@@ -214,10 +169,15 @@ public class ModConfig {
             writer.flush();
             writer.close();
             for (ModData m : config.mods) {
-                FileWriter w = new FileWriter(DIR_PATH+m.mod_id +".json");
-                GSON.toJson(m, w);
-                w.flush();
-                w.close();
+                JsonElement json = ModData.CODEC.encodeStart(JsonOps.INSTANCE,m).getOrThrow(false,(e)-> {
+                    ExcavatedVariants.LOGGER.error("Default config file is corrupted during write. Something is very wrong: {}",e);
+                });
+                if (json != null) {
+                    FileWriter w = new FileWriter(DIR_PATH+m.mod_id +".json");
+                    GSON.toJson(json, w);
+                    w.flush();
+                    w.close();
+                }
             }
         } catch (IOException e) {
             e.printStackTrace();
@@ -227,8 +187,9 @@ public class ModConfig {
     private static void checkExistence() throws IOException {
         if (!Files.exists(CONFIG_PATH)) Files.createDirectories(CONFIG_PATH);
         if (!Files.exists(CONFIG_PATH.resolve(ExcavatedVariants.MOD_ID))) Files.createDirectories(CONFIG_PATH.resolve(ExcavatedVariants.MOD_ID));
-        if (!Files.exists(Paths.get(FULL_PATH))) {
-            Files.createFile(Paths.get(FULL_PATH));
+        Path path = Path.of(FULL_PATH);
+        if (!Files.exists(path)) {
+            Files.createFile(path);
             save(getDefault());
         }
     }
